# colour-specio

./: .gitattributes  .gitignore  AUTHORS.md  CLAUDE.md  DEVELOPER.md  LICENSE.md  README.md  cspell.json  pyproject.toml  tasks.py
.claude/: cr_refactoring_plan.md
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation-improvement.yml  feature-request.yml  question.yml
data/: 0f342ef2_v0.csmf
examples/: .gitignore  cr120.py  cr300.py  example1.py  example2.py  example_virtual_spectrometer.py  read_file.py  saveing_measurements.py  virtual_example.py
examples/old_proto/: ex_file.csmf  new_file.csmf  read_check.py
examples/timed_measurements/: analyze.py  measure.py
protobuf/: measurements.proto
scripts/: build_proto.zsh
specio/: Common.py  Spectrometer.py  __init__.py  common.py  fileio.py  measurement.py  spectrometer.py
specio/ColorimetryResearch/: CR300.py  CRSpectrometer.py  CR_Definitions.py  __init__.py
specio/_device_implementations/: __init__.py  colorimetry_research.py  konica_minolta.py  virtual.py
specio/_device_implementations/colorimetry_research/: __init__.py  _common.py  _cr_colorimeters.py  _cr_spectrometers.py  colorimetry_research.py
specio/colorimeters/: __init__.py  colorimetry_research.py  common.py
specio/common/: __init__.py  _measurements_shared.py  colorimeters.py  exceptions.py  spectrometers.py  utility.py
specio/device_implementations/: colorimetry_research.py
specio/protobuf/: __init__.py  measurements.proto  measurements_pb2.py  measurements_pb2.pyi
specio/protoio/_generated_/: measurements_pb2.py
specio/scripts/: csmf_anonymize.py  csmf_doctor.py
specio/scripts/tests/: test_csmf_anonymize.py
specio/serialization/: __init__.py  csmf.py  measurements.py  spectral.py
specio/serialization/protobuf/: __init__.py  common.proto  common_pb2.py  common_pb2.pyi  measurements.proto  measurements_pb2.py  measurements_pb2.pyi  rgb_space.proto  rgb_space_pb2.py  rgb_space_pb2.pyi
specio/serialization/tests/: test_csmf.py  test_measurements.py
specio/serialization/tests/data/: 1ba5c5f8.csmf
specio/spectrometers/: __init__.py  colorimetry_research.py  common.py  konica_minolta.py
specio/utility/: __init__.py  spectral.py
tests/: test_specio.py
typings/specio/protoio/_generated_/: measurements_pb2.pyi
